--- a/index.html
+++ b/index.html
@@ -755,60 +755,60 @@
                     <!-- Slides Container -->
                     <div id="carousel-slides" class="flex transition-transform duration-500 ease-in-out">
                         <!-- Slide 1 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="1.jpg" alt="Project Documentation 1" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="1.jpg" alt="Project Documentation 1" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 2 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="2.jpg" alt="Project Documentation 2" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="2.jpg" alt="Project Documentation 2" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 3 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="3.jpg" alt="Project Documentation 3" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="3.jpg" alt="Project Documentation 3" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 4 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="4.jpg" alt="Project Documentation 4" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="4.jpg" alt="Project Documentation 4" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 5 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="5.jpg" alt="Project Documentation 5" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="5.jpg" alt="Project Documentation 5" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 6 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="6.jpg" alt="Project Documentation 6" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="6.jpg" alt="Project Documentation 6" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 7 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="7.jpg" alt="Project Documentation 7" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="7.jpg" alt="Project Documentation 7" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 8 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="8.jpg" alt="Project Documentation 8" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="8.jpg" alt="Project Documentation 8" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 9 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="9.jpg" alt="Project Documentation 9" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="9.jpg" alt="Project Documentation 9" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 10 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="10.jpg" alt="Project Documentation 10" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="10.jpg" alt="Project Documentation 10" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 11 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="11.jpg" alt="Project Documentation 11" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="11.jpg" alt="Project Documentation 11" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 12 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="12.jpg" alt="Project Documentation 12" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="12.jpg" alt="Project Documentation 12" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 13 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="13.jpg" alt="Project Documentation 13" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="13.jpg" alt="Project Documentation 13" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                         <!-- Slide 14 -->
-                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900 p-4 sm:p-8">
-                            <img src="14.jpg" alt="Project Documentation 14" class="max-w-full max-h-[70vh] object-contain rounded-lg">
+                        <div class="carousel-slide min-w-full flex items-center justify-center bg-stone-50 dark:bg-stone-900">
+                            <img src="14.jpg" alt="Project Documentation 14" class="max-w-full max-h-[70vh] object-contain">
                         </div>
                     </div>
 
